# genex

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: OPEN_SOURCE_PLAN.md  USAGE.md
examples/: demo_session.md
skills/: genex.skill
src/genex/: cli.py
src/genex/analysis/: health.py
src/genex/core/: database.py  models.py
src/genex/core/parsers/: __init__.py  gedcom.py  twentythree.py
src/genex/output/: __init__.py  terminal.py
src/genex/snpdb/: curated.py
tests/: conftest.py  test_cli.py  test_database.py  test_parsers.py
tests/fixtures/: synthetic_family.ged  synthetic_genome.txt
