[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genex"
version = "0.1.0"
description = "Privacy-first genetic data explorer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Cameron Ehrlich" }
]
keywords = ["genetics", "23andme", "snp", "genomics", "cli", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/cameronehrlich/genex"
Repository = "https://github.com/cameronehrlich/genex"
Issues = "https://github.com/cameronehrlich/genex/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
genex = "genex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["genex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
